@@ -1,6 +1,6 @@
 Package: bbmle
 Title: Tools for general maximum likelihood estimation
-Version: 1.0.16
+Version: 1.0.17
 Author: Ben Bolker <bolker@mcmaster.ca>, R Development Core Team
 Maintainer: Ben Bolker <bolker@mcmaster.ca>
 Depends:
@@ -21,7 +21,8 @@ Suggests:
     AICcmodavg,
     Hmisc,
     optimx (>= 2013.8.6),
-    knitr
+    knitr,
+    testthat
 VignetteBuilder: knitr
 BuildVignettes: yes
 Description: Methods and functions for fitting maximum likelihood models in R.
