@@ -1,4 +1,5 @@
 library(bbmle)
+library(testthat)
 x <- 0:10
 y <- c(26, 17, 13, 12, 20, 5, 9, 8, 5, 4, 8)
 d <- data.frame(x,y)
@@ -11,11 +12,14 @@ mfit1 <- mle2(y~dpois(lambda=exp(loglambda)),
               start=list(loglambda=log(mean(y))),data=d)
               
 gfit0 <- glm(y~1,family=poisson)
-coef(mfit0)-coef(gfit0)
-logLik(mfit0)-logLik(gfit0)
-predict(gfit0,type="response")
-predict(mfit0)  ## why only one value??
+expect_equal(unname(coef(mfit0)),unname(coef(gfit0)))
+expect_equal(logLik(mfit0),logLik(gfit0))
+expect_equal(predict(mfit0),  ## only one value for now
+             unique(predict(gfit0,type="response")))
+
 ## FIXME: residuals are backwards
-residuals(mfit0)
-residuals(gfit0,type="response")
+expect_equal(residuals(mfit0,type="response"),unname(residuals(gfit0,type="response")))
+## FIXME: residuals are backwards
+expect_equal(residuals(mfit0,type="pearson"),unname(residuals(gfit0,type="pearson")))
+
 
