@@ -1,7 +1,6 @@
 
-R Under development (unstable) (2012-07-27 r60013) -- "Unsuffered Consequences"
-Copyright (C) 2012 The R Foundation for Statistical Computing
-ISBN 3-900051-07-0
+R Under development (unstable) (2014-05-14 r65609) -- "Unsuffered Consequences"
+Copyright (C) 2014 The R Foundation for Statistical Computing
 Platform: i686-pc-linux-gnu (32-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -19,6 +18,8 @@ Type 'demo()' for some demos, 'help()' for on-line help, or
 Type 'q()' to quit R.
 
 > library(bbmle)
+Loading required package: stats4
+> library(testthat)
 > x <- 0:10
 > y <- c(26, 17, 13, 12, 20, 5, 9, 8, 5, 4, 8)
 > d <- data.frame(x,y)
@@ -31,29 +32,18 @@ Type 'q()' to quit R.
 +               start=list(loglambda=log(mean(y))),data=d)
 >               
 > gfit0 <- glm(y~1,family=poisson)
-> coef(mfit0)-coef(gfit0)
-       interc 
--2.709339e-10 
-> logLik(mfit0)-logLik(gfit0)
-'log Lik.' 7.105427e-15 (df=1)
-> predict(gfit0,type="response")
-       1        2        3        4        5        6        7        8 
-11.54545 11.54545 11.54545 11.54545 11.54545 11.54545 11.54545 11.54545 
-       9       10       11 
-11.54545 11.54545 11.54545 
-> predict(mfit0)  ## why only one value??
-[1] 11.54545
+> expect_equal(unname(coef(mfit0)),unname(coef(gfit0)))
+> expect_equal(logLik(mfit0),logLik(gfit0))
+> expect_equal(predict(mfit0),  ## only one value for now
++              unique(predict(gfit0,type="response")))
+> 
 > ## FIXME: residuals are backwards
-> residuals(mfit0)
- [1]  4.2540141  1.6052883  0.4280769  0.1337740  2.4881969 -1.9263460
- [7] -0.7491346 -1.0434374 -1.9263460 -2.2206488 -1.0434374
-> residuals(gfit0,type="response")
-         1          2          3          4          5          6          7 
-14.4545455  5.4545455  1.4545455  0.4545455  8.4545455 -6.5454545 -2.5454545 
-         8          9         10         11 
--3.5454545 -6.5454545 -7.5454545 -3.5454545 
+> expect_equal(residuals(mfit0,type="response"),unname(residuals(gfit0,type="response")))
+> ## FIXME: residuals are backwards
+> expect_equal(residuals(mfit0,type="pearson"),unname(residuals(gfit0,type="pearson")))
+> 
 > 
 > 
 > proc.time()
    user  system elapsed 
-  0.728   1.048   1.627 
+  0.816   1.912   2.711 
