@@ -4,6 +4,7 @@ y <- c(26, 17, 13, 12, 20, 5, 9, 8, 5, 4, 8)
 d <- data.frame(x,y)
 LL <- function(ymax=15, xhalf=6)
     -sum(stats::dpois(y, lambda=ymax/(1+x/xhalf), log=TRUE))
+options(digits=3)
 mfit0 <- mle2(y~dpois(lambda=exp(interc)),
               start=list(interc=log(mean(y))),data=d)
 mfit1 <- mle2(y~dpois(lambda=exp(loglambda)),
